<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/add_card_btn_add"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/add_card_btn_add" />

    <android.support.v7.widget.CardView

        android:id="@+id/add_card_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        card_view:cardCornerRadius="@dimen/cardview_radius_add_card"
        card_view:contentPaddingBottom="@dimen/cardview_padding_top_bottom"
        card_view:contentPaddingLeft="@dimen/cardview_padding"
        card_view:contentPaddingRight="@dimen/cardview_padding"
        card_view:contentPaddingTop="@dimen/cardview_padding_top_bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_card_edit_alias"
                style="@style/GosDefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:hint="@string/hint_card_alias" />

            <com.gospay.ui.view.GosEditNumber
                android:id="@+id/add_card_edit_number"
                style="@style/GosDefaultEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_card_number"
                android:inputType="phone"
                android:maxLength="19" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/add_card_edit_expiry_month"
                        style="@style/GosDefaultEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_card_expiry_month"
                        android:maxLength="2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_margin"
                        android:paddingLeft="6dp"
                        android:paddingRight="6dp"
                        android:text="@string/expiry_divider"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/add_card_edit_expiry_year"
                        style="@style/GosDefaultEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_card_expiry_year"
                        android:maxLength="2" />
                </LinearLayout>

                <EditText
                    android:id="@+id/add_card_edit_cvv"
                    style="@style/GosDefaultEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:hint="@string/hint_card_cvv"
                    android:maxLength="3" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <CheckBox
        android:id="@+id/add_card_check_save_cvv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_card_cardview"
        android:layout_marginTop="16dp"
        android:text="@string/toggle_save_cvv" />
</RelativeLayout>